--- a/main.css
+++ b/main.css
@@ -3,9 +3,25 @@ body {
 }
 .custom-text1 {
   font-family: "Monoton", cursive;
+  font-size: 68px;
+  font-weight: 100;
+  cursor: pointer;
+  display: flex;
+}
+.custom-text1 span {
+  transition: all 0.3s ease;
+  display: flex;
+  margin: 0 3px;
+}
+.custom-text1 span:hover {
+  font-weight: 700;
+  color: var(--main-color);
+  transform: scale(1.1);
 }
 .custom-text2 {
   font-family: "East Sea Dokdo", cursive;
+  color: var(--main-color);
+  font-size: 80px;
 }
 .button {
   padding: 9px 15px;
@@ -55,7 +71,7 @@ nav {
 }
 .nav-brand span {
   font-family: "Monoton", cursive;
-
+  font-weight: 100;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,7 +97,29 @@ nav {
   color: var(--white-color);
   font-size: 18px;
   font-weight: 500;
+  border-bottom: 1.5px solid transparent;
 }
 .destop-links li a:hover {
   border-bottom: 1.5px solid var(--main-color);
+}
+.header-banner {
+  background: url(./img/header.jpg);
+  background-position: bottom center;
+  height: 450px;
+  padding: 50px 50px 30px 50px;
+  position: relative;
+  color: var(--white-color);
+  background-size: cover;
+}
+.header-banner p {
+  width: 500px;
+  line-height: 1.7;
+}
+
+.header-banner img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  height: 300px;
 }
