--- a/defaults.css
+++ b/defaults.css
@@ -10,3 +10,12 @@
   --black-color: #000;
   --white-color: #fff;
 }
+
+@keyframes circularmotion {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
